2004-12-02  Mark A. Hershberger  <mah@everybody.org>

	* xml.el (xml-parse-dtd): Don't show validity messages when
	xml-validating-parser is nil.
	(xml-substitute-special): Fix validity error messages to
	actually show the unexpandable entity.  Added validity error if &
	isn't followed by an entity.
	(xml-parse-tag): Concatnate any string following the a
	<![CDATA[]]> section to the parsed CDATA.
	(xml-parse-dtd): Skip parameter entity declarations and use of
	parameter entities.

2004-12-01  Luc Teirlinck  <teirllm@auburn.edu>

	* kmacro.el (kmacro-default-counter-format): New var.
	(kmacro-set-format): Use it.  Delete `(printf format)' from prompt.
	(kmacro-display): Remove `nil' from `and' form.  Delete call to
	`format' inside `message'.
	(kmacro-start-macro): Use `kmacro-default-counter-format'.

2004-12-01  Stefan Monnier  <monnier@iro.umontreal.ca>

	* pcvs.el (cvs-header-msg): New function.
	(cvs-update-header): Use it.  Change calling convention.
	Correctly handle the case of having simultaneous active processes.
	(cvs-sentinel): Don't call cvs-update-header any more.
	(cvs-mode-run): Update call and add cvs-update-header to postproc.

2004-12-01  Jay Belanger  <belanger@truman.edu>

	* calc/calc-ext.el (calc-inverse, calc-hyperbolic):
	Change message.

2004-12-01  Juri Linkov  <juri@jurta.org>

	* progmodes/prolog.el (prolog-mode-variables):
	Fix imenu-generic-expression.

2004-12-01  Daniel Pfeiffer  <occitan@esperanto.org>

	* faces.el (glyph): New face.

	* disp-table.el: Add an autoloaded table, that doesn't require
	this library, with glyph face.

	* textmodes/conf-mode.el (conf-ppd-mode-syntax-table): New var.
	(conf-ppd-mode): New conf-mode wrapper for printer descriptions.
	(conf-quote-normal): Allow normalizing only ' or ".
	(conf-mode): Regexp-quote constructed comment-start and don't
	match section {} where "name" contains braces.

	* files.el (auto-mode-alist): Add conf-ppd-mode, inittab and acpid
	files.
